crates/loxide_parser/snapshots/parser/snapshots-outputs/loxide_parser__parser__tests__expression.snap
---
source: crates/loxide_parser/src/parser.rs
expression: asts
---
[
    Err(
        Expect(
            "expression",
        ),
    ),
    Err(
        Expect(
            "expression",
        ),
    ),
    Err(
        Expect(
            "expression",
        ),
    ),
]
