crates/loxide_parser/snapshots/parser/snapshots-outputs/loxide_parser__parser__tests__many_statements.snap
---
source: crates/loxide_parser/src/parser.rs
expression: results
---
(
    [
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                        },
                        operator: Plus,
                    },
                ),
            },
        ),
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    3.0,
                                ),
                            ),
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    4.0,
                                ),
                            ),
                        },
                        operator: Plus,
                    },
                ),
            },
        ),
        Expression(
            Expr {
                kind: Literal(
                    Boolean(
                        true,
                    ),
                ),
            },
        ),
        Expression(
            Expr {
                kind: Literal(
                    Boolean(
                        false,
                    ),
                ),
            },
        ),
        Expression(
            Expr {
                kind: Literal(
                    Nil,
                ),
            },
        ),
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                        },
                        operator: GreaterEqual,
                    },
                ),
            },
        ),
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                        },
                        operator: Greater,
                    },
                ),
            },
        ),
    ],
    [
        Expect(
            "expression",
        ),
        Expect(
            "expression",
        ),
        Expect(
            "expression",
        ),
    ],
)
