crates/loxide_parser/snapshots/parser/snapshots-outputs/loxide_parser__parser__tests__single_statement.snap
---
source: crates/loxide_parser/src/parser.rs
expression: asts
---
[
    Ok(
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                        },
                        operator: Plus,
                    },
                ),
            },
        ),
    ),
    Ok(
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    3.0,
                                ),
                            ),
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    4.0,
                                ),
                            ),
                        },
                        operator: Less,
                    },
                ),
            },
        ),
    ),
]
