crates/loxide_parser/snapshots/parser/snapshots-outputs/loxide_parser__parser__tests__while_statement.snap
---
source: crates/loxide_parser/src/parser.rs
expression: results
---
(
    [
        While(
            WhileStmt {
                condition: Expr {
                    kind: Literal(
                        Boolean(
                            true,
                        ),
                    ),
                },
                body: Block(
                    [
                        While(
                            WhileStmt {
                                condition: Expr {
                                    kind: Literal(
                                        Boolean(
                                            false,
                                        ),
                                    ),
                                },
                                body: Block(
                                    [
                                        Expression(
                                            Expr {
                                                kind: Literal(
                                                    String(
                                                        "Hello world",
                                                    ),
                                                ),
                                            },
                                        ),
                                    ],
                                ),
                            },
                        ),
                    ],
                ),
            },
        ),
    ],
    [],
)
